OAS updated nested api integration
